# acme-data-dash

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  data_dash.db  dev.sh  mkdocs.yml
.github/: copilot-instructions.md
.github/agents/: contribution-expert.agent.md
.github/workflows/: pipeline.yml
benches/: benchmark.py  generate_graph.py  main_benchmark.rs
docs/: design_data_availability_dashboard.md  index.md
scripts/: reset_db.sh  schema.sql  seed_data.sql
src/: connections.rs  db.rs  lib.rs  main.rs  secrets.rs
src/api/: mod.rs
src/checks/: example_check.rs  mod.rs
ui/: index.html  package-lock.json  package.json  vite.config.js
ui/src/: App.svelte  app.css
ui/src/lib/: CheckList.svelte  CheckRunner.svelte  Connections.svelte  DataSources.svelte  History.svelte  Secrets.svelte  Settings.svelte
