[package]
name = "acme-rust-template"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A template for Rust projects"
repository = "https://github.com/yourusername/acme-rust-template"
homepage = "https://github.com/yourusername/acme-rust-template"
documentation = "https://docs.rs/acme-rust-template"
readme = "README.md"
license = "Apache-2.0"
keywords = ["template", "rust", "cli"]
categories = ["command-line-utilities"]

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
criterion = "0.5" # Benchmarking library

[profile.profiling] # For profiling builds
inherits = "release"
debug = true

[[bench]] # Sample benchmark
name = "main_benchmark"
harness = false
