[package]
name = "acme-data-dash"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Data Availability Dashboard"
repository = "https://github.com/yourusername/acme-data-dash"
license = "Apache-2.0"

[dependencies]
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
rayon = "1.10"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

[dev-dependencies]
criterion = "0.5"

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "main_benchmark"
harness = false
